# pollinate

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  anerd  anerd-client  anerd-client-tcp.go  anerd-client.1  anerd-server  anerd-server-tcp  anerd-server-tcp.1  anerd-server-tcp.go  anerd-server-udp.1  anerd-server-udp.c  anerd-server.1  anerd-server.go  anerd-tcp  anerd-tcp.1  anerd-tcp.go  anerd-udp.c  anerd-web  anerd-web.1  anerd-web.go  anerd.1  anerd.c  anerd.conf  check_pollen  configure.ac  entropy.ubuntu.com.pem  nerd  pollen  pollen.8  pollen.go  pollinate  pollinate.1  usr.bin.pollen
debian/: anerd-client.cron.d  anerd-client.default  anerd-client.install  anerd-client.manpages  anerd-client.postinst  anerd-server.anerd-server-tcp.upstart  anerd-server.anerd-server-udp.upstart  anerd-server.anerd-tcp.upstart  anerd-server.anerd-udp.upstart  anerd-server.default  anerd-server.install  anerd-server.manpages  anerd-server.postinst  anerd-server.postrm  anerd-server.upstart  anerd-web-common.install  anerd-web-common.manpages  anerd-web.upstart  anerd-webs.postinst  anerd-webs.upstart  changelog  control  copyright  cron.d  default  install  manpages  pollen.default  pollen.install  pollen.manpages  pollen.postinst  pollen.postrm  pollen.upstart  pollinate.cron.d  pollinate.default  pollinate.install  pollinate.maintscript  pollinate.manpages  pollinate.postinst  pollinate.postrm  (+5 more)
initramfs/hooks/: anerd-client  anerd-client-udp
initramfs/scripts/init-bottom/: anerd  anerd-client
