ACLOCAL_AMFLAGS = -I m4
MAINTAINERCLEANFILES = \
	config.log config.status \
	depcomp aclocal.m4 install-sh Makefile.in \
	anerd-server-udp anerd-server-udp.o

dist_doc_DATA = AUTHORS ChangeLog COPYING NEWS README

dist_man_MANS = anerd-server-udp.1 anerd-client.1

bin_PROGRAMS = anerd-server-udp
anerd_SOURCES = anerd-server-udp.c

bin_SCRIPTS = anerd-client
